@@ -56,3 +56,4 @@ Current
 	- Modules: protocol/inspircd and protocol/charybdis are now version 0.8.
 	- Core/Modules/Protocols: Fixed several bugs in the updated API.
 	- Modules: Added hostserv/main.
+	- Events: Added event_eos for when we finish syncing.
